<resources>
    <string name="app_name">RPAV</string>
    <string name="app_name_long">Road Alert Public Network</string>
    <string name="app_name_complete">RPAV: Road Alert Public Network</string>
    <string name="btnAlertMenuText">!</string>
    <string name="placeholderText">Placeholder</string>
    <string name="alert_options_title">Alert Options</string>
    <string name="btn_confirmar_alerta">True</string>
    <string name="btn_reportar">False</string>
    <string name="comment_hint">Something to comment?</string>
    <string name="btnComentar_enviar"><![CDATA[>>]]></string>
    <string name="txt_comentarios_placeholder">Comments</string>
    <string name="incluir_imagen">Include Picture</string>
    <string name="accidente">Accident</string>
    <string name="incendio">Fire</string>
    <string name="herido">Wounded Person</string>
    <string name="bloqueo">Bloquade</string>
    <string name="congestionamiento">Traffic Jam</string>
    <string name="marchas">Manifestations</string>
    <string name="calle_danada">Damaged Street</string>
    <string name="corte_electrico">Power gone</string>
    <string name="custom_alert">Custom alert</string>
    <string name="custom_alert_empty_error">Insert an alert name</string>
    <string name="alert_sent">Alert sent</string>
    <string name="alert_not_sent">Alert could not be sent</string>
    <string name="permisos_faltantes">Missing Permissions</string>
    <string name="dialogo_llamar">Would you like to call %1$s (%2$s)</string>
    <string name="llamar">Call</string>
    <string name="cancelar">Cancel</string>
    <string name="llamada_emergencia">Emergency Call</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="password_error">Please enter your password</string>
    <string name="username">Username</string>
    <string name="username_error">Invalid username</string>
    <string name="email">Email</string>
    <string name="email_error">Invalid email</string>
    <string name="phone">Phone</string>
    <string name="phone_error">Invalid phone number</string>
    <string name="code">Code</string>
    <string name="code_error">Invalid code</string>
    <string name="login">Login</string>
    <string name="send_code">Send Code</string>
    <string name="confirm">Confirm</string>
    <string name="address">Address</string>
    <string name="confirmaciones">Votes T</string>
    <string name="reports">Votes F</string>
    <string name="sendComment"><![CDATA[> >]]></string>
    <string name="comments">Comments</string>
    <string name="coordinates">Coordinates</string>
    <string name="date">Date</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">This app will allow you to send and receive different alerts with and from the people around you.</string>
    <string name="onboarding_description1">Press the big button down there to send an alert</string>
    <string name="onboarding_description2">But remember to register and login before doing so!</string>
    <string name="about_app_name">RPAG:\n Red Publica de Alertas Generales</string>
    <string name="about_description">Aplicacion creada por Oscar Ibañez para la asignatura Proyecto Integrador</string>
    <string name="languages">Languages</string>
    <string name="automatic">Automatic</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="log_in">Log In</string>
    <string name="profile">Profile</string>
    <string name="about_this_app">About this app</string>
    <string name="log_out">Log out</string>
    <string name="comment_missing">Please write a comment first</string>
    <string name="comment_successful">Comment entered</string>
    <string name="comment_error">Error. Comment not entered</string>
    <string name="error_wait_and_try">Error. Wait a moment please</string>
    <string name="local_help_numbers">Local help numbers</string>
    <string name="police">Police</string>
    <string name="firefighters">Firefighters</string>
    <string name="paramedics">Paramedics</string>
    <string name="unknown">Unknown</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic3BhcnRhbmNhdDciLCJhIjoiY2p2ZzVkOWRrMDQ1ejQxcmc2bjgxc3JtYSJ9.Nn4-Xa4AaeoVe3p3z67I7g</string>

    <string name="quit">Quit</string>
    <string name="app_running">App running</string>
    <string name="show_onboarding">Show Onboarding</string>
    <string name="positive_vote_entered">Positive vote entered</string>
    <string name="negative_vote_entered">Negative vote entered</string>
    <string name="vote_retired">Vote retired</string>
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
