<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/chkIncluidePicLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@color/colorLightPurple"
        android:gravity="center">

        <CheckBox
            android:id="@+id/chkIncluidePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incluir_imagen"
            android:textColor="@color/colorWhite"
            android:buttonTint="@color/colorWhite"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="@color/dark">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp">
            <Button
                android:id="@+id/btnAccidente"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/accidente"
                android:drawableStart="@drawable/icon_type_accident_small"
                android:paddingHorizontal="15dp"
                android:textAlignment="viewStart"
                android:background="@drawable/alert_menu_button"
                android:textColor="@color/colorWhite" />
            <Button
                android:id="@+id/btnIncendio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/incendio"
                android:drawableStart="@drawable/icon_type_fire_small"
                android:paddingHorizontal="15dp"
                android:textAlignment="viewStart"
                android:background="@drawable/alert_menu_button"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnHerido"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/herido"
                android:drawableStart="@drawable/icon_type_wounded_small"
                android:paddingHorizontal="15dp"
                android:textAlignment="viewStart"
                android:background="@drawable/alert_menu_button"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnBloqueo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/bloqueo"
                android:drawableStart="@drawable/icon_type_blocked_small"
                android:paddingHorizontal="15dp"
                android:textAlignment="viewStart"
                android:background="@drawable/alert_menu_button"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnCongestionamiento"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/congestionamiento"
                android:drawableStart="@drawable/icon_type_traffic_small"
                android:paddingHorizontal="15dp"
                android:textAlignment="viewStart"
                android:background="@drawable/alert_menu_button"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnMarchas"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/marchas"
                android:drawableStart="@drawable/icon_type_marching_small"
                android:paddingHorizontal="15dp"
                android:textAlignment="viewStart"
                android:background="@drawable/alert_menu_button"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnCalleDanada"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/calle_danada"
                android:drawableStart="@drawable/icon_type_street_damage_small"
                android:paddingHorizontal="15dp"
                android:textAlignment="viewStart"
                android:background="@drawable/alert_menu_button"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnCorte"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/corte_electrico"
                android:drawableStart="@drawable/icon_type_power_cut_small"
                android:paddingHorizontal="15dp"
                android:textAlignment="viewStart"
                android:background="@drawable/alert_menu_button"
                android:textColor="@color/colorWhite"/>
            <LinearLayout
                android:id="@+id/btnCustomAlert"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:background="@drawable/alert_menu_button">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/custom_alert_icon_orange"/>
                <EditText
                    android:id="@+id/editTxtCustomAlert"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/custom_alert"
                    android:maxLength="30"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="@color/colorWhite"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>