<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_description1"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="20dp"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/onboarding_desc_img1"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_description2"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="20dp"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/onboarding_desc_img2"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <Button
        android:id="@+id/btnOnboardingDescriptionBack"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/back"
        android:textColor="@color/colorWhite"
        android:background="@drawable/dark_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOnboardingDescriptionNext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:background="@drawable/dark_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>